removed console.log from hero.js, fixed minor layout issues for tablet size and very small smartphone screens

--- a/src/App/Styles/App.scss
+++ b/src/App/Styles/App.scss
@@ -1,6 +1,12 @@
 @mixin responsive($size) {
-  @media (min-width: 1000px) {
-    @content;
+  @if $size == tablet {
+    @media (min-width: 710px) {
+      @content;
+    }
+  } @else if $size == desktop {
+    @media (min-width: 1000px) {
+      @content;
+    }
   }
 }
 
@@ -14,7 +20,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 // @mixin responsive($size) {
