--- a/src/App/Styles/Card.scss
+++ b/src/App/Styles/Card.scss
@@ -1,13 +1,22 @@
 @import "./app.scss";
 
 .card {
+  width: 100%;
+  @include responsive(tablet) {
+    width: auto;
+  }
   margin-bottom: 20px;
   @include responsive(desktop) {
     margin-bottom: 70px;
   }
   &__wrap {
-    width: 335px;
+    width: 100%;
     height: 255px;
+
+    @include responsive(tablet) {
+      width: 335px;
+      height: 255px;
+    }
     position: relative;
     display: flex;
     align-items: flex-end;
